# PixelKit

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  NOTICE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  pixelkit.lintian-overrides  rules
docs/: ARCHITECTURE.md  PACKAGING.md  pixelkit.1
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD
packaging/flatpak/: README.md  cargo-sources.json  generate-cargo-sources.py  io.github.Kuucheen.PixelKit.local.yml  io.github.Kuucheen.PixelKit.yml
packaging/linux/: io.github.Kuucheen.PixelKit.desktop  io.github.Kuucheen.PixelKit.metainfo.xml  pixelkit-autostart.desktop  pixelkit.service
packaging/nix/: README.md
packaging/opensuse/: pixelkit.spec
packaging/rpm/: pixelkit.spec
scripts/: build-packages.sh  bump-package-release.py  install-user.sh  make-debian-source.sh  make-dist.sh  publish-obs.sh  set-version.py  vendor.sh
snap/: snapcraft.yaml
src/: capture.rs  color.rs  config.rs  daemon.rs  lib.rs  main.rs  measurement.rs
src/ui/: editor.rs  hub.rs  loupe.rs  magnifier.rs  mod.rs  picker.rs  ruler.rs
